# ads-analytics

./: .gitignore  .gitmodules  main.py  pyproject.toml
notebooks/: bigquery_cleanup.ipynb  test_google_ads.ipynb  test_tiktok_ads.ipynb
scripts/: backfill_google.py  backfilll_tiktok.py
src/cmk_ads/: config.py
src/google_ads/: google-ads.py  google_ads.py  main.py  utils.py
src/tiktok_ads/: get_all_campaign.py  main.py  refresh_access_token.py  tiktok-ads.py  tiktok_ads.py
src/utils/: bq_helper.py  bq_prepare_table.py  google.py  google_ads_helper.py  prepare_table.py  schemas.py
tests/: google_verify_service_account.py  ingest_current_month.py
