[tool.poetry]
name = "ads-analytics"
version = "0.1.0"
description = ""
authors = ["Nikki Satmaka <30800020+NikkiSatmaka@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "google_ads", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
pandas = "^2.2.2"
pyspark = "^3.5.1"
facebook-business = "^20.0.0"
google-ads = "^24.1.0"
google-cloud-bigquery = "^3.25.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.10"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
