[tool.poetry]
name = "ads-analytics"
version = "0.1.0"
description = ""
authors = ["Nikki Satmaka <30800020+NikkiSatmaka@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "google_ads", from = "src"},
    {include = "utils", from = "src"},
    {include = "business_api_client", from = "src/tiktok-business-api-sdk/python_sdk"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
poetry-dotenv-plugin = "^0.2.0"
requests = "^2.32.3"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
arrow = "^1.3.0"
loguru = "^0.7.2"
icecream = "^2.1.3"
rich = "^13.7.1"
tqdm = "^4.66.4"
attrs = "^23.2.0"
typer = "^0.12.3"
facebook-business = "^20.0.0"
google-ads = "^24.1.0"
google-cloud-bigquery = "^3.25.0"
pandas-gbq = "^0.23.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.10"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
